force-app/main/default/objects/Account_Fax__c/Account_Fax__c.object-meta.xml
<CustomObject>
    <label>Account Fax</label>
    <nameField>
        <displayFormat>AFI-{000000}</displayFormat>
        <label>Account Fax ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Fax</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>