force-app/main/default/objects/Account_Fax__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Lead - A</fullName>
            </value>
            <value>
                <fullName>Lead - B</fullName>
            </value>
            <value>
                <fullName>Lead - C</fullName>
            </value>
            <value>
                <fullName>CRM - Signed Customer</fullName>
            </value>
            <value>
                <fullName>CPA - Signed Customer Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>CRM - Signed Customer in Implementation</fullName>
            </value>
            <value>
                <fullName>CRM - Cancelled</fullName>
            </value>
            <value>
                <fullName>CRM - Cancelled - Non Payment</fullName>
            </value>
            <value>
                <fullName>Campaigner - Active</fullName>
            </value>
            <value>
                <fullName>Campaigner - Suspended</fullName>
            </value>
            <value>
                <fullName>Campaigner - Cancelled</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Partner &amp; Customer</fullName>
            </value>
            <value>
                <fullName>Partner Prospect</fullName>
            </value>
            <value>
                <fullName>Pilot Customer</fullName>
            </value>
            <value>
                <fullName>CSPM Customer (Playbook)</fullName>
            </value>
            <value>
                <fullName>Partner - Nurture</fullName>
            </value>
            <value>
                <fullName>Partner - Cancel</fullName>
            </value>
            <value>
                <fullName>Partner - Active</fullName>
            </value>
            <value>
                <fullName>Contactology</fullName>
            </value>
            <value>
                <fullName>JBlast</fullName>
            </value>
            <value>
                <fullName>EmailDirect</fullName>
            </value>
            <value>
                <fullName>Publicaster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>