force-app/main/default/objects/Account_Fax__c/fields/Accounts_Payable__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable__c</fullName>
    <label>Accounts Payable</label>
    <length>180</length>
    <type>Text</type>
</CustomField>