force-app/main/default/objects/Account_Fax__c/fields/Acct_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Acct_End_Date__c</fullName>
    <label>Account End Date</label>
    <type>Date</type>
</CustomField>