force-app/main/default/objects/Account_Fax__c/fields/Acct_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Acct_Start_Date__c</fullName>
    <label>Account Start Date</label>
    <type>Date</type>
</CustomField>