force-app/main/default/objects/Account_Fax__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <description>used to capture Application ID from ISP and referred by ETL workflow to avoid generating duplicate records in salesforce</description>
    <label>Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>