force-app/main/default/objects/Account_Fax__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>BillingCountry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>