force-app/main/default/objects/Account_Fax__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Please enter the j2 Global Inc. Brand</description>
    <inlineHelpText>Please enter the j2 Global Inc. Brand</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eFax Developer</fullName>
            </value>
            <value>
                <fullName>Fax.com</fullName>
            </value>
            <value>
                <fullName>RapidFAX</fullName>
            </value>
            <value>
                <fullName>Send2Fax</fullName>
            </value>
            <value>
                <fullName>Smartfax</fullName>
            </value>
            <value>
                <fullName>Trustfax</fullName>
            </value>
            <value>
                <fullName>jConnect</fullName>
            </value>
            <value>
                <fullName>eFax</fullName>
            </value>
            <value>
                <fullName>eVoice</fullName>
            </value>
            <value>
                <fullName>eFax Corporate</fullName>
            </value>
            <value>
                <fullName>Electric Mail</fullName>
            </value>
            <value>
                <fullName>Venali</fullName>
            </value>
            <value>
                <fullName>FuseMail</fullName>
            </value>
            <value>
                <fullName>MailWise</fullName>
            </value>
            <value>
                <fullName>Enterprise Mailer</fullName>
            </value>
            <value>
                <fullName>M4 Internet</fullName>
            </value>
            <value>
                <fullName>Quexion</fullName>
            </value>
            <value>
                <fullName>MyFax</fullName>
            </value>
            <value>
                <fullName>KeepItSafe</fullName>
            </value>
            <value>
                <fullName>Landslide</fullName>
            </value>
            <value>
                <fullName>OneBox</fullName>
            </value>
            <value>
                <fullName>MetroFax</fullName>
            </value>
            <value>
                <fullName>Sfax</fullName>
            </value>
            <value>
                <fullName>Infonet</fullName>
            </value>
            <value>
                <fullName>JBlast</fullName>
            </value>
            <value>
                <fullName>Protus IP Solutions</fullName>
            </value>
            <value>
                <fullName>Rogers Business Internet Fax</fullName>
            </value>
            <value>
                <fullName>Telus</fullName>
            </value>
            <value>
                <fullName>Virtual Fax</fullName>
            </value>
            <value>
                <fullName>Campaigner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>