force-app/main/default/objects/Account_Fax__c/fields/Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Collection_Method__c</fullName>
    <label>Collection Method</label>
    <length>60</length>
    <type>Text</type>
</CustomField>