force-app/main/default/objects/Account_Fax__c/fields/Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>Corp_ID__c</fullName>
    <label>Corp ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>