force-app/main/default/objects/Account_Fax__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <inlineHelpText>LiveVault NetSuite Customer ID</inlineHelpText>
    <label>Customer ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>