force-app/main/default/objects/Account_Fax__c/fields/Reseller_ID__c.field-meta.xml
<CustomField>
    <fullName>Reseller_ID__c</fullName>
    <label>Reseller ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>