force-app/main/default/objects/Account_Fax__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <description>Field Value under Consideration for differentiating the Sales Groups - CORP Sales; INSIDE Sales; OUTBOUND Sales</description>
    <inlineHelpText>Field Value under Consideration for differentiating the Sales Groups - CORP Sales; INSIDE Sales; OUTBOUND Sales</inlineHelpText>
    <label>Sales Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>