force-app/main/default/objects/Account_Fax__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <length>80</length>
    <type>Text</type>
</CustomField>