force-app/main/default/objects/Account_Fax__c/fields/Secure__c.field-meta.xml
<CustomField>
    <fullName>Secure__c</fullName>
    <label>Secure</label>
    <length>6</length>
    <type>Text</type>
</CustomField>