force-app/main/default/objects/Account_Fax__c/fields/Source_System_Notes__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Notes__c</fullName>
    <label>Source System Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>