force-app/main/default/objects/Account_Fax__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ISP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>De-activated</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Rebilling Failed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Re-opened</fullName>
            </value>
            <value>
                <fullName>Suspended - KIS</fullName>
            </value>
            <value>
                <fullName>Sent to Collection</fullName>
            </value>
            <value>
                <fullName>Provisioned</fullName>
            </value>
            <value>
                <fullName>Inactive (Dead)</fullName>
            </value>
            <value>
                <fullName>Inactive (Winback)</fullName>
            </value>
            <value>
                <fullName>Partner (Prospect)</fullName>
            </value>
            <value>
                <fullName>Partner (Active)</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>