force-app/main/default/objects/Account_Fax__c/recordTypes/Consensus_Account.recordType-meta.xml
<RecordType>
    <fullName>Consensus_Account</fullName>
    <active>true</active>
    <description>Consensus Account Process</description>
    <label>Consensus: Account</label>
</RecordType>