force-app/main/default/objects/Account_Fax__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_ID__c</columns>
    <columns>Corp_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Description__c</columns>
    <columns>Update_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Corp_ID__c</field>
        <operation>equals</operation>
        <value>90351</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>